# video_generation_pipeline

./: .env.example  .gitignore  CONTRIBUTING.md  MODELS.md  PIPELINE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_PLAN.md  SECURITY.md  pyproject.toml  requirements.txt
pipeline/: __init__.py  __main__.py  anchors.py  assemble.py  batch.py  config.py  deps.py  editing.py  falx.py  keyframes.py  llm.py  music.py  postprod.py  project.py  server.py  shots.py  snapshots.py  timeline.py  tts.py
projects/example/: biblia.example.md  project.json
projects/example/captures/: README.md
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  main.jsx  store.jsx  ui.css
web/src/components/: AnchorsStage.jsx  JobTracker.jsx  KeyframeEditor.jsx  KeyframesStage.jsx  MaskCanvas.jsx  MasterStage.jsx  PostProdStage.jsx  ShotPanel.jsx  ShotsStage.jsx  Variants.jsx
web/src/lib/: refs.js
