[project]
name = "video-pipeline"
version = "1.0.0"
description = "Pipeline generalizado de generación de video por etapas (personajes → sets → keyframes → shots → unificación), parametrizable por proyecto."
requires-python = ">=3.10"
dependencies = [
    "fal-client>=0.5",
    "python-dotenv>=1.0",
    "Pillow>=10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
